# minknap-cmake

./: CMakeLists.txt  README.md  minknapConfig.cmake.in
include/: minknap.h
src/: minknap.c
